src/grammar/delphiParser.java
// Generated from grammar/delphi.g4 by ANTLR 4.13.2
package grammar;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class delphiParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, IDENTIFIER=52, 
		INTEGER_LITERAL=53, STRING_LITERAL=54, COMMENT=55, WS=56;
	public static final int
		RULE_program = 0, RULE_programHeader = 1, RULE_implementationSection = 2, 
		RULE_procedureImplementation = 3, RULE_functionImplementation = 4, RULE_constructorImplementation = 5, 
		RULE_destructorImplementation = 6, RULE_variableDeclarationSection = 7, 
		RULE_variableDeclarationList = 8, RULE_variableDeclaration = 9, RULE_identifierList = 10, 
		RULE_typeName = 11, RULE_block = 12, RULE_statementList = 13, RULE_statement = 14, 
		RULE_ifStatement = 15, RULE_whileStatement = 16, RULE_forStatement = 17, 
		RULE_breakStatement = 18, RULE_continueStatement = 19, RULE_readlnStatement = 20, 
		RULE_methodCallStatement = 21, RULE_assignmentStatement = 22, RULE_writelnStatement = 23, 
		RULE_expression = 24, RULE_atom = 25, RULE_argumentList = 26, RULE_typeSection = 27, 
		RULE_classDeclaration = 28, RULE_classParentList = 29, RULE_interfaceDeclaration = 30, 
		RULE_interfaceBody = 31, RULE_interfaceMethodDeclaration = 32, RULE_classBody = 33, 
		RULE_classVisibilitySection = 34, RULE_visibilityModifier = 35, RULE_classMember = 36, 
		RULE_fieldDeclaration = 37, RULE_methodDeclaration = 38, RULE_constructorDeclaration = 39, 
		RULE_destructorDeclaration = 40, RULE_procedureDeclaration = 41, RULE_functionDeclaration = 42, 
		RULE_formalParameterList = 43, RULE_formalParameter = 44;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "programHeader", "implementationSection", "procedureImplementation", 
			"functionImplementation", "constructorImplementation", "destructorImplementation", 
			"variableDeclarationSection", "variableDeclarationList", "variableDeclaration", 
			"identifierList", "typeName", "block", "statementList", "statement", 
			"ifStatement", "whileStatement", "forStatement", "breakStatement", "continueStatement", 
			"readlnStatement", "methodCallStatement", "assignmentStatement", "writelnStatement", 
			"expression", "atom", "argumentList", "typeSection", "classDeclaration", 
			"classParentList", "interfaceDeclaration", "interfaceBody", "interfaceMethodDeclaration", 
			"classBody", "classVisibilitySection", "visibilityModifier", "classMember", 
			"fieldDeclaration", "methodDeclaration", "constructorDeclaration", "destructorDeclaration", 
			"procedureDeclaration", "functionDeclaration", "formalParameterList", 
			"formalParameter"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'.'", "'program'", "';'", "'procedure'", "'function'", "':'", 
			"'constructor'", "'destructor'", "'var'", "','", "'Integer'", "'String'", 
			"'Boolean'", "'begin'", "'end'", "'if'", "'then'", "'else'", "'while'", 
			"'do'", "'for'", "':='", "'to'", "'downto'", "'break'", "'continue'", 
			"'readln'", "'('", "')'", "'writeln'", "'or'", "'and'", "'not'", "'<'", 
			"'>'", "'<='", "'>='", "'='", "'<>'", "'+'", "'-'", "'*'", "'/'", "'true'", 
			"'false'", "'type'", "'class'", "'interface'", "'private'", "'public'", 
			"'protected'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, "IDENTIFIER", "INTEGER_LITERAL", "STRING_LITERAL", 
			"COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "delphi.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public delphiParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public ProgramHeaderContext programHeader() {
			return getRuleContext(ProgramHeaderContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TypeSectionContext typeSection() {
			return getRuleContext(TypeSectionContext.class,0);
		}
		public List<ImplementationSectionContext> implementationSection() {
			return getRuleContexts(ImplementationSectionContext.class);
		}
		public ImplementationSectionContext implementationSection(int i) {
			return getRuleContext(ImplementationSectionContext.class,i);
		}
		public VariableDeclarationSectionContext variableDeclarationSection() {
			return getRuleContext(VariableDeclarationSectionContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof delphiVisitor ) return ((delphiVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			programHeader();
			setState(92);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__45) {
				{
				setState(91);
				typeSection();
				}
			}

			setState(97);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 432L) != 0)) {
				{
				{
				setState(94);
				implementationSection();
				}
				}
				setState(99);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(101);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__8) {
				{
				setState(100);
				variableDeclarationSection();
				}
			}

			setState(103);
			block();
			setState(104);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramHeaderContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(delphiParser.IDENTIFIER, 0); }
		public ProgramHeaderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programHeader; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).enterProgramHeader(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).exitProgramHeader(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof delphiVisitor ) return ((delphiVisitor<? extends T>)visitor).visitProgramHeader(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramHeaderContext programHeader() throws RecognitionException {
		ProgramHeaderContext _localctx = new ProgramHeaderContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_programHeader);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			match(T__1);
			setState(107);
			match(IDENTIFIER);
			setState(108);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImplementationSectionContext extends ParserRuleContext {
		public ProcedureImplementationContext procedureImplementation() {
			return getRuleContext(ProcedureImplementationContext.class,0);
		}
		public FunctionImplementationContext functionImplementation() {
			return getRuleContext(FunctionImplementationContext.class,0);
		}
		public ConstructorImplementationContext constructorImplementation() {
			return getRuleContext(ConstructorImplementationContext.class,0);
		}
		public DestructorImplementationContext destructorImplementation() {
			return getRuleContext(DestructorImplementationContext.class,0);
		}
		public ImplementationSectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_implementationSection; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).enterImplementationSection(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).exitImplementationSection(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof delphiVisitor ) return ((delphiVisitor<? extends T>)visitor).visitImplementationSection(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImplementationSectionContext implementationSection() throws RecognitionException {
		ImplementationSectionContext _localctx = new ImplementationSectionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_implementationSection);
		try {
			setState(114);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__3:
				enterOuterAlt(_localctx, 1);
				{
				setState(110);
				procedureImplementation();
				}
				break;
			case T__4:
				enterOuterAlt(_localctx, 2);
				{
				setState(111);
				functionImplementation();
				}
				break;
			case T__6:
				enterOuterAlt(_localctx, 3);
				{
				setState(112);
				constructorImplementation();
				}
				break;
			case T__7:
				enterOuterAlt(_localctx, 4);
				{
				setState(113);
				destructorImplementation();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProcedureImplementationContext extends ParserRuleContext {
		public List<TerminalNode> IDENTIFIER() { return getTokens(delphiParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(delphiParser.IDENTIFIER, i);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public FormalParameterListContext formalParameterList() {
			return getRuleContext(FormalParameterListContext.class,0);
		}
		public VariableDeclarationSectionContext variableDeclarationSection() {
			return getRuleContext(VariableDeclarationSectionContext.class,0);
		}
		public ProcedureImplementationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_procedureImplementation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).enterProcedureImplementation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).exitProcedureImplementation(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof delphiVisitor ) return ((delphiVisitor<? extends T>)visitor).visitProcedureImplementation(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProcedureImplementationContext procedureImplementation() throws RecognitionException {
		ProcedureImplementationContext _localctx = new ProcedureImplementationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_procedureImplementation);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			match(T__3);
			setState(117);
			match(IDENTIFIER);
			setState(118);
			match(T__0);
			setState(119);
			match(IDENTIFIER);
			setState(121);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__27) {
				{
				setState(120);
				formalParameterList();
				}
			}

			setState(123);
			match(T__2);
			setState(125);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__8) {
				{
				setState(124);
				variableDeclarationSection();
				}
			}

			setState(127);
			block();
			setState(128);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunctionImplementationContext extends ParserRuleContext {
		public List<TerminalNode> IDENTIFIER() { return getTokens(delphiParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(delphiParser.IDENTIFIER, i);
		}
		public TypeNameContext typeName() {
			return getRuleContext(TypeNameContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public FormalParameterListContext formalParameterList() {
			return getRuleContext(FormalParameterListContext.class,0);
		}
		public VariableDeclarationSectionContext variableDeclarationSection() {
			return getRuleContext(VariableDeclarationSectionContext.class,0);
		}
		public FunctionImplementationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionImplementation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).enterFunctionImplementation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).exitFunctionImplementation(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof delphiVisitor ) return ((delphiVisitor<? extends T>)visitor).visitFunctionImplementation(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionImplementationContext functionImplementation() throws RecognitionException {
		FunctionImplementationContext _localctx = new FunctionImplementationContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_functionImplementation);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130);
			match(T__4);
			setState(131);
			match(IDENTIFIER);
			setState(132);
			match(T__0);
			setState(133);
			match(IDENTIFIER);
			setState(135);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__27) {
				{
				setState(134);
				formalParameterList();
				}
			}

			setState(137);
			match(T__5);
			setState(138);
			typeName();
			setState(139);
			match(T__2);
			setState(141);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__8) {
				{
				setState(140);
				variableDeclarationSection();
				}
			}

			setState(143);
			block();
			setState(144);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ConstructorImplementationContext extends ParserRuleContext {
		public List<TerminalNode> IDENTIFIER() { return getTokens(delphiParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(delphiParser.IDENTIFIER, i);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public FormalParameterListContext formalParameterList() {
			return getRuleContext(FormalParameterListContext.class,0);
		}
		public ConstructorImplementationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constructorImplementation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).enterConstructorImplementation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).exitConstructorImplementation(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof delphiVisitor ) return ((delphiVisitor<? extends T>)visitor).visitConstructorImplementation(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConstructorImplementationContext constructorImplementation() throws RecognitionException {
		ConstructorImplementationContext _localctx = new ConstructorImplementationContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_constructorImplementation);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(146);
			match(T__6);
			setState(147);
			match(IDENTIFIER);
			setState(148);
			match(T__0);
			setState(149);
			match(IDENTIFIER);
			setState(151);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__27) {
				{
				setState(150);
				formalParameterList();
				}
			}

			setState(153);
			match(T__2);
			setState(154);
			block();
			setState(155);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DestructorImplementationContext extends ParserRuleContext {
		public List<TerminalNode> IDENTIFIER() { return getTokens(delphiParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(delphiParser.IDENTIFIER, i);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public DestructorImplementationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_destructorImplementation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).enterDestructorImplementation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).exitDestructorImplementation(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof delphiVisitor ) return ((delphiVisitor<? extends T>)visitor).visitDestructorImplementation(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DestructorImplementationContext destructorImplementation() throws RecognitionException {
		DestructorImplementationContext _localctx = new DestructorImplementationContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_destructorImplementation);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(157);
			match(T__7);
			setState(158);
			match(IDENTIFIER);
			setState(159);
			match(T__0);
			setState(160);
			match(IDENTIFIER);
			setState(161);
			match(T__2);
			setState(162);
			block();
			setState(163);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VariableDeclarationSectionContext extends ParserRuleContext {
		public VariableDeclarationListContext variableDeclarationList() {
			return getRuleContext(VariableDeclarationListContext.class,0);
		}
		public VariableDeclarationSectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableDeclarationSection; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).enterVariableDeclarationSection(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).exitVariableDeclarationSection(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof delphiVisitor ) return ((delphiVisitor<? extends T>)visitor).visitVariableDeclarationSection(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VariableDeclarationSectionContext variableDeclarationSection() throws RecognitionException {
		VariableDeclarationSectionContext _localctx = new VariableDeclarationSectionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_variableDeclarationSection);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(165);
			match(T__8);
			setState(166);
			variableDeclarationList();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VariableDeclarationListContext extends ParserRuleContext {
		public List<VariableDeclarationContext> variableDeclaration() {
			return getRuleContexts(VariableDeclarationContext.class);
		}
		public VariableDeclarationContext variableDeclaration(int i) {
			return getRuleContext(VariableDeclarationContext.class,i);
		}
		public VariableDeclarationListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableDeclarationList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).enterVariableDeclarationList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).exitVariableDeclarationList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof delphiVisitor ) return ((delphiVisitor<? extends T>)visitor).visitVariableDeclarationList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VariableDeclarationListContext variableDeclarationList() throws RecognitionException {
		VariableDeclarationListContext _localctx = new VariableDeclarationListContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_variableDeclarationList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(171); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(168);
				variableDeclaration();
				setState(169);
				match(T__2);
				}
				}
				setState(173); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==IDENTIFIER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VariableDeclarationContext extends ParserRuleContext {
		public IdentifierListContext identifierList() {
			return getRuleContext(IdentifierListContext.class,0);
		}
		public TypeNameContext typeName() {
			return getRuleContext(TypeNameContext.class,0);
		}
		public VariableDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).enterVariableDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).exitVariableDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof delphiVisitor ) return ((delphiVisitor<? extends T>)visitor).visitVariableDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VariableDeclarationContext variableDeclaration() throws RecognitionException {
		VariableDeclarationContext _localctx = new VariableDeclarationContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_variableDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(175);
			identifierList();
			setState(176);
			match(T__5);
			setState(177);
			typeName();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IdentifierListContext extends ParserRuleContext {
		public List<TerminalNode> IDENTIFIER() { return getTokens(delphiParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(delphiParser.IDENTIFIER, i);
		}
		public IdentifierListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_identifierList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).enterIdentifierList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).exitIdentifierList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof delphiVisitor ) return ((delphiVisitor<? extends T>)visitor).visitIdentifierList(this);
			else return visitor.visitChildren(this);
		}
	}
